# PointCloudTools

./: .gitignore  .gitlab-ci.yml  AHN.sln  BUILD.md  CMakeLists.txt  CMakeSettings.json.sample  CONTRIBUTING.md  CloudLib.DEM.Win32.props  CloudLib.DEM.x64.props  CloudLib.sln  CloudLib.sln.GhostDoc.xml  CloudTools.DEM.x64.props  CloudTools.DotSettings  CloudTools.sln  CloudTools.sln.GhostDoc.xml  Folder.DotSettings  LICENSE  Makefile  Makefile.config.sample  README.md  Shell.bat  Shell.config.cmd.sample  WINDOWS_QUICK_START.md
.github/workflows/: ci.yml
.gitlab/: codechecker_skip.lst
AHN.Buildings/: AHN.Buildings.vcxproj  AHN.Buildings.vcxproj.filters  BuildingAreaComparer.hpp  BuildingChangeDetection.hpp  BuildingExtraction.cpp  BuildingExtraction.h  BuildingFilter.cpp  BuildingFilter.h  CMakeLists.txt  CannyEdgeDetector.hpp  ClusterFilter.cpp  ClusterFilter.h  Comparison.cpp  Comparison.h  ContourClassification.cpp  ContourClassification.h  ContourConvexHullRasterizer.cpp  ContourConvexHullRasterizer.h  ContourDetection.cpp  ContourDetection.h  ContourFiltering.cpp  ContourFiltering.h  ContourSimplification.cpp  ContourSimplification.h  ContourSplitting.cpp  ContourSplitting.h  IOMode.cpp  IOMode.h  MajorityFilter.cpp  MajorityFilter.h  Makefile  MorphologyFilter.cpp  MorphologyFilter.h  NoiseFilter.cpp  NoiseFilter.h  Process.cpp  Process.h  Result.cpp  Result.h  ResultFile.cpp  (+2 more)
AHN.Buildings.Aggregate/: AHN.Buildings.Aggregate.vcxproj  AHN.Buildings.Aggregate.vcxproj.filters  CMakeLists.txt  Makefile  Region.h  main.cpp
AHN.Buildings.MPI/: AHN.Buildings.MPI.vcxproj  CMakeLists.txt  Makefile  main.cpp
AHN.Buildings.Parallel/: AHN.Buildings.Parallel.vcxproj  CMakeLists.txt  Makefile  main.cpp
AHN.Buildings.Verify/: AHN.Buildings.Verify.vcxproj  AHN.Buildings.Verify.vcxproj.filters  CMakeLists.txt  Coverage.h  Makefile  main.cpp
AHN.Vegetation/: CMakeLists.txt  CentroidDistance.cpp  CentroidDistance.h  DistanceCalculation.h  DistanceCalculation.hpp  EliminateNonTrees.cpp  EliminateNonTrees.h  EliminateNonTrees.hpp  GravityDistance.cpp  GravityDistance.h  HausdorffDistance.cpp  HausdorffDistance.h  HeightDifference.cpp  HeightDifference.h  InterpolateNoData.cpp  InterpolateNoData.h  InterpolateNoData.hpp  MatrixTransformation.cpp  MatrixTransformation.h  MorphologyClusterFilter.cpp  MorphologyClusterFilter.h  MorphologyClusterFilter.hpp  NoiseFilter.cpp  NoiseFilter.h  PostProcess.cpp  PostProcess.h  PreProcess.cpp  PreProcess.h  Process.cpp  Process.h  TreeCrownSegmentation.cpp  TreeCrownSegmentation.h  VolumeDifference.cpp  VolumeDifference.h  main.cpp
AHN.Vegetation.Verify/: CMakeLists.txt  main.cpp
CloudLib.DEM/: CMakeLists.txt  Calculation.cpp  Calculation.h  CalculationBase.cpp  CalculationBase.h  CloudLib.DEM.vcxproj  CloudLib.DEM.vcxproj.GhostDoc.xml  CloudLib.DEM.vcxproj.filters  Color.cpp  Color.h  Helper.cpp  Helper.h  Makefile  Metadata.cpp  Metadata.h  Operation.cpp  Operation.h  Rasterize.cpp  Rasterize.h  SweepLine.h  SweepLineCalculation.h  SweepLineTransformation.h  Transformation.cpp  Transformation.h  Window.h
CloudTools.Common/: CMakeLists.txt  CloudTools.Common.vcxproj  CloudTools.Common.vcxproj.filters  Helper.h  IO.cpp  IO.h  Makefile  Operation.cpp  Operation.h  Reporter.cpp  Reporter.h
CloudTools.Common/IO/: IO.cpp  IO.h  Result.cpp  Result.h  ResultCollection.cpp  ResultCollection.h
CloudTools.DEM/: CMakeLists.txt  Calculation.cpp  Calculation.h  ClusterMap.cpp  ClusterMap.h  Color.cpp  Color.h  Creation.cpp  Creation.h  DatasetCalculation.hpp  DatasetTransformation.hpp  Helper.cpp  Helper.h  Metadata.cpp  Metadata.h  Operation.cpp  Operation.h  Rasterize.cpp  Rasterize.h  SweepLineCalculation.h  SweepLineCalculation.hpp  SweepLineTransformation.h  SweepLineTransformation.hpp  Transformation.cpp  Transformation.h  Window.h
CloudTools.DEM.Compare/: CMakeLists.txt  CloudTools.DEM.Compare.vcxproj  CloudTools.DEM.Compare.vcxproj.filters  Comparison.h  Makefile  main.cpp
CloudTools.DEM.Difference/: CMakeLists.txt  main.cpp
CloudTools.DEM.Filter/: CMakeLists.txt  CloudTools.DEM.Filter.vcxproj  Makefile  main.cpp
CloudTools.DEM.Mask/: CMakeLists.txt  main.cpp
CloudTools.DEM/Algorithms/: HierachicalClustering.hpp  MatrixTransformation.cpp  MatrixTransformation.h
CloudTools.DEM/Comparers/: Difference.hpp
CloudTools.DEM/Filters/: ClusterFilter.hpp  MajorityFilter.hpp  MorphologyFilter.hpp  NoiseFilter.hpp
CloudTools.Vegetation/: BuildingFacadeSeedRemoval.hpp  CMakeLists.txt  CentroidDistance.cpp  CentroidDistance.h  DistanceCalculation.h  EliminateNonTrees.cpp  EliminateNonTrees.h  HausdorffDistance.cpp  HausdorffDistance.h  HeightDifference.cpp  HeightDifference.h  InterpolateNoData.cpp  InterpolateNoData.h  MorphologyClusterFilter.cpp  MorphologyClusterFilter.h  NoiseFilter.cpp  NoiseFilter.h  PostProcess.cpp  PostProcess.h  PreProcess.cpp  PreProcess.h  RiverMask.hpp  TreeCrownSegmentation.cpp  TreeCrownSegmentation.h  VolumeDifference.cpp  VolumeDifference.h  main.cpp
CloudTools.Vegetation.Verify/: CMakeLists.txt  main.cpp
